--- a/samm/src/main/resources/static/css/detail.css
+++ b/samm/src/main/resources/static/css/detail.css
@@ -21,21 +21,12 @@
 		top: 73px !important;
 	}
 }
-
-@
-keyframes down { 0%{
+@keyframes down { 
+	0%{
 	transform: translateY(-50px)
-}
-
-100
-%
-{
-transform
-:
-translateY(
-0px
-)
-}
+	}100%{
+	transform: translateY(0px)
+	}
 }
 .person {
 	border: 10px solid transparent;
@@ -110,7 +101,6 @@ translateY(
 
 .detail-icon {
 	margin-top: 20px;
-	margin-left: 5px;
 }
 
 .dicon {
