--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -1,3 +1,7 @@
+.hidden{
+	display: none;
+}
+
 .festival--subject {
 	margin-top: 70px;
 	text-align: center;
@@ -43,6 +47,21 @@
 .festival-section2 {
 	padding-top: 2em;
 }
+
+#chatbot{
+	font-size: 2.7em;
+    float: right;
+	
+}
+
+#chatbot-div{
+	cursor:pointer;
+	position: fixed;
+    bottom: 0px;
+    right: 30px;
+    z-index: 100;
+}
+
 
 
 .s003 {
