--- a/samm/src/main/resources/templates/chatbot.html
+++ b/samm/src/main/resources/templates/chatbot.html
@@ -1,1 +1,81 @@
-<h1> chatbotpage</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="/css/chatbot/styles.css" />
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>ChatBot - totoro</title>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+</head>
+<body id="chat-screen">
+	<div class="status-bar">
+		<div class="status-bar__column">
+			<span>No Service</span> <i class="fa-solid fa-wifi"></i>
+			<!-- To Do : Wifi Icon -->
+		</div>
+		<div class="status-bar__column" id="mainTime">
+			<span>18:43</span>
+		</div>
+		<div class="status-bar__column">
+			<span>50%</span> <i class="fa-solid fa-battery-half fa-lg"></i>
+			<!-- Battery Icon-->
+			<i class="fa-solid fa-bolt"></i>
+			<!-- Lightming Icon-->
+		</div>
+	</div>
+
+	<header class="alt-header">
+		<div class="alt-header__column">
+			<a href="javascript:history.back();"> <i
+				class="fa-solid fa-angle-left fa-2x"></i>
+			</a>
+		</div>
+		<div class="alt-header__column">
+			<h1 class="alt-header__title"><a href="/chatbot">ChatBot</a></h1>
+		</div>
+		<div class="alt-header__column">
+			<span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span> <span><i
+				class="fa-solid fa-bars fa-lg"></i></span>
+		</div>
+	</header>
+	<main class="main-screen main-chat">
+		<div class="chat__timestamp">Tuesday, March 29, 2022</div>
+
+		<div class="message-row">
+			<img
+				src="/images/imbot.jpg" />
+			<div class=":message-row__content">
+				<span class="message__author">Chatbot</span>
+				<div class="message__info">
+					<span class="message__bubble">안녕하세요 무엇을 도와 드릴까요?</span> <span
+						class="message__time">21:27</span>
+				</div>
+			</div>
+		</div>
+
+	</main>
+
+	<div class="reply" id="chatbot-form" name="chatbot-form">
+		<div class="reply__column">
+			<i class="far fa-square-plus fa-lg"></i>
+		</div>
+		<div class="reply__column">
+			<input type="text" name="chat" id="chat" placeholder="Write a message..." />
+			<i class="fa-regular fa-face-grin fa-xl"></i>
+			<button>
+				<i class="fa-solid fa-arrow-up"></i>
+			</button>
+		</div>
+	</div>
+
+	<div id="no-mobile">
+		<span> Your screen is too big resize please..</span>
+	</div>
+	
+	<script src="https://kit.fontawesome.com/8c64c3404f.js"></script>
+	<script src="/js/chatbot.js"></script>
+
+</body>
+</html>
