--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -107,5 +107,5 @@
 		</div>
 	</div>
 	
-	<script src="/js/map.js"></script>
+	<script type="text/javascript" th:src="@{/js/map.js}"></script>
 </body>
