--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -32,6 +32,7 @@
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/festival.css">
 
+<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
@@ -60,7 +61,7 @@
 					<li class="nav-item active" th:unless="${session.loginuser == null}">
 					<a href="/users/mypage" class="nav-link"><span class="nav-item"></span>My page</a>
 					
-					<li class="nav-item active"> 
+					<li class="nav-item active" th:if="${loginadmin} != null"> 
 					<a href="/mng/main" class="nav-link"><span class="nav-item"></span> Admin </a>					
 					
 					<!-- th:if="${session.loginadmin != null && session.loginuser == null}" -->
@@ -170,7 +171,7 @@
 
 
 
-
+	<script src="/js/login.js"></script>
 	<script src="/js/chatbot.js"></script>
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/jquery-migrate-3.0.1.min.js"></script>
