map scroll 기능 적용, cahtbot 적용

--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -53,6 +53,18 @@
     float: right;
 }
 
+.fdrop{
+	top:75% !important;
+}
+
+.droplink{
+	text-align:left;
+	color:black !important;
+	font-size: 12px;
+}
+.droplink:hover{
+	color:#fd7e14 !important;
+}
 
 #chatbot-div{
 	cursor:pointer;
