--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -17,6 +17,8 @@
 	href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+	
+	
 
 <link rel="stylesheet" href="/css/animate.css">
 
@@ -57,18 +59,22 @@
 					<li class="nav-item active"><a href="/board" class="nav-link">Board</a></li>
 					
 					<li class="nav-item active" th:if="${session.loginuser == null}"><a href="/login" class="nav-link">Sign In</a></li>
-					
-					<li class="nav-item active" th:unless="${session.loginuser == null}">
-					<a href="/users/mypage" class="nav-link"><span class="nav-item"></span>My page</a>
-					
-					<li class="nav-item active" th:if="${loginadmin} != null"> 
-					<a href="/mng/main" class="nav-link"><span class="nav-item"></span> Admin </a>					
-					
+
 					<!-- th:if="${session.loginadmin != null && session.loginuser == null}" -->
 					
-					<li class="nav-item active" th:unless="${session.loginuser == null}">
-					<a href="/logout" class="nav-link"><span th:text="${session.loginuser.name}"></span><span class="nav-item"></span>Sign Out</a>
+					<li class="nav-item active dropdown" th:unless="${session.loginuser == null}">
+						<a class="nav-link dropdown-toggle"  data-toggle="dropdown">
+							<span th:text="${session.loginuser.name}">
+							</span>
+						</a>	
+						<ul class="dropdown-menu fdrop">
+						  <li><a href="/logout" class="nav-link droplink">Sign Out</a></li>
+						  <li><a href="/users/mypage" class="nav-link droplink">My page</a></li>
+						</ul>
+					</li>  
 					
+					<li class="nav-item active" th:if="${loginadmin} != null"> 
+					<a href="/mng/main" class="nav-link"><span class="nav-item"></span> Admin </a>	
 					
 				</ul>
 			</div>
