--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -31,7 +31,7 @@
 <link rel="stylesheet" href="/css/bootstrap-datepicker.css">
 <link rel="stylesheet" href="/css/jquery.timepicker.css">
 
-
+<link rel="stylesheet" href="/css/chatbot/styles.css">
 <link rel="stylesheet" href="/css/flaticon.css">
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/festival.css">
@@ -46,8 +46,9 @@
 
 
 <body>
+
 	<nav
-		class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light scrolled awake">
+		class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light scrolled awake" id="ftco-navbar">
 		<div class="container">
 			<a class="navbar-brand" href="/">SAMM<span>Search Festival</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -66,17 +67,29 @@
 					
 					<li class="nav-item active" th:if="${session.loginuser == null}"><a href="/login" class="nav-link">Sign In</a></li>
 					
-					<li class="nav-item active" th:unless="${session.loginuser == null}">
-					<a href="/users/mypage" class="nav-link"><span class="nav-item"></span>My page</a>
+					<li th:unless="${session.loginuser == null}" class="nav-item active dropdown" >
+						<a class="nav-link dropdown-toggle"  data-toggle="dropdown">
+							<span th:text="${session.loginuser.name}"></span>
+						</a>	
+						<ul class="dropdown-menu fdrop">
+						  <li><a href="/logout" class="nav-link droplink">Sign Out</a></li>
+						  <li><a href="/users/mypage" class="nav-link droplink">My page</a></li>
+						</ul>
+					</li>  
 					
-					<li class="nav-item active" th:unless="${session.loginuser == null}">
-					<a href="/logout" class="nav-link"><span th:text="${session.loginuser.name}"></span><span class="nav-item"></span>Sign Out</a>
+					<li class="nav-item active" th:if="${loginadmin} != null"> 
+					<a href="/mng/main" class="nav-link"><span class="nav-item"></span> Admin </a>	
 					
 					
 				</ul>
 			</div>
 		</div>
 	</nav>
+	
+	<div id="chatbot-div">
+	<span id="chatbot-text" class="hidden">원하는 축제를 챗봇이 찾아 드려요!</span>
+	<i id="chatbot" class="bi bi-chat-right-dots"></i>
+	</div>
 
 	<div class="map-paintting">
 		<div id="map-kakao"></div>
@@ -107,5 +120,18 @@
 		</div>
 	</div>
 	
+	<script src="/js/login.js"></script>
+	<script src="/js/chatbot.js"></script>
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="/js/popper.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/jquery.easing.1.3.js"></script>
+	<script src="/js/jquery.waypoints.min.js"></script>
+	<script src="/js/jquery.stellar.min.js"></script>
+	<script src="/js/owl.carousel.min.js"></script>
+	<script src="/js/jquery.magnific-popup.min.js"></script>
+	<script src="/js/jquery.animateNumber.min.js"></script>
+	<script src="/js/bootstrap-datepicker.js"></script>
 	<script type="text/javascript" th:src="@{/js/map.js}"></script>
 </body>
