map에서 상세축제 들어갔다 뒤로가기 할시 복구되도록 시도중

--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -134,4 +134,5 @@
 	<script src="/js/jquery.animateNumber.min.js"></script>
 	<script src="/js/bootstrap-datepicker.js"></script>
 	<script type="text/javascript" th:src="@{/js/map.js}"></script>
+	<script type="text/javascript" th:src="@{/js/jquery.ba-bbq.min.js}"></script>
 </body>
