--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -54,15 +54,16 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 					<li class="nav-item active"><a href="/about" class="nav-link">About</a></li>
-					<li class="nav-item active"><a href="/map"
-						class="nav-link">Festival</a></li>
+					<li class="nav-item active"><a href="/map" class="nav-link">Festival</a></li>
 					<li class="nav-item active"><a href="/board" class="nav-link">Board</a></li>
 					
-					<li class="nav-item active" th:if="${session.loginuser == null}"><a href="/login" class="nav-link">Sign In</a></li>
+					<li class="nav-item active" th:if="${session.loginuser == null && session.loginadmin == null}">
+						<a href="/login" class="nav-link">Sign In</a>
+					</li>
 
 					<!-- th:if="${session.loginadmin != null && session.loginuser == null}" -->
 					
-					<li class="nav-item active dropdown" th:unless="${session.loginuser == null}">
+					<li class="nav-item active dropdown" th:if="${session.loginuser != null && session.loginadmin == null}">
 						<a class="nav-link dropdown-toggle"  data-toggle="dropdown">
 							<span th:text="${session.loginuser.name}">
 							</span>
@@ -72,9 +73,14 @@
 						  <li><a href="/users/mypage" class="nav-link droplink">My page</a></li>
 						</ul>
 					</li>  
+
+					<li class="nav-item active" th:if="${session.loginadmin != null && session.loginuser == null}"> 
+						<a href="/logout" class="nav-link">Sign Out</a>
+					</li>
 					
-					<li class="nav-item active" th:if="${loginadmin} != null"> 
-					<a href="/mng/main" class="nav-link"><span class="nav-item"></span> Admin </a>	
+					<li class="nav-item active" th:if="${session.loginadmin != null && session.loginuser == null}"> 
+						<a href="/mng/main" class="nav-link"> Admin </a>
+					</li>	
 					
 				</ul>
 			</div>
