festival 조회수 기능 추가

--- a/samm/src/main/resources/static/css/detail.css
+++ b/samm/src/main/resources/static/css/detail.css
@@ -220,3 +220,13 @@
 .control-opacity {
 	opacity: 0;
 }
+
+.viewicon{
+	float: right;
+}
+
+.cnttext{
+	font-size: 20px;
+	text-align: center;
+	padding-right: 15px;
+}
