--- a/samm/src/main/resources/templates/center.html
+++ b/samm/src/main/resources/templates/center.html
@@ -57,13 +57,13 @@
 							<span class="fa fa-map-marker"></span><span
 								th:text="${list.addr1}"></span>
 						</p>
-						<!--
+						
  						<ul>
-							<li><span class="flaticon-shower"></span>2</li>
-							<li><span class="flaticon-king-size"></span>3</li>
-							<li><span class="flaticon-mountains"></span>Near Mountain</li>
+							<li><i class="bi bi-eye star"></i> <span class="view_cnt" th:text="${list.view_cnt}"></span> </li>
+							<li><i class="bi bi-stars star"></i><span></span>0</li>
+							<!-- <li><span class="flaticon-mountains"></span>Near Mountain</li> -->
 						</ul>
-						 -->
+						
 
 					</div>
 				</div>
