--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -87,7 +87,11 @@
   }
 }
 
-
+.view_cnt{
+	padding-left : 7px;
+	color: #b3b3b3 !important;
+	font-size:16px !important;
+}
 
 .s003 {
 	display: -ms-flexbox;
