--- a/samm/src/main/resources/templates/festival/detail.html
+++ b/samm/src/main/resources/templates/festival/detail.html
@@ -52,6 +52,9 @@
 		<a class="heart dicon" onClick="registerWish()"><i class="bi bi-heart"></i></a>
 		
 		<span class="dicon" data-toggle="modal" data-target="#myModal"><a class="share"  ><i class="bi bi-share" ></i></a></span>	
+		<div class="viewicon">
+		<span class="dicon share "><span class="cnttext" th:text="${festival.view_cnt}"></span><i class="bi bi-eye "></i></span>
+		</div>
 	</div>
 	<!-- Modal -->
 	<div id="myModal" class="modal fade" role="dialog">
