--- a/samm/src/main/resources/templates/festival/searchfestival.html
+++ b/samm/src/main/resources/templates/festival/searchfestival.html
@@ -229,6 +229,11 @@
 							<span class="fa fa-map-marker"></span><span
 								th:text="${list.addr1}"></span>
 						</p>
+ 						<ul>
+							<li><i class="bi bi-eye star"></i> <span class="view_cnt" th:text="${list.view_cnt}"></span> </li>
+							<li><i class="bi bi-stars star"></i><span></span>0</li>
+							<!-- <li><span class="flaticon-mountains"></span>Near Mountain</li> -->
+						</ul>
 
 
 					</div>
