--- a/samm/src/main/resources/templates/login.html
+++ b/samm/src/main/resources/templates/login.html
@@ -1,51 +1,51 @@
-<script src="/js/login.js"></script>
 
 
 <meta charset="UTF-8">
 <section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url(/images/bg_2.jpg);">
+	style="background-image: url(/images/festival5.jpg);">
 	<div class="overlay"></div>
 	<div class="container">
-		<div
-			class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
-
-			<div class="container">
-				<div class="col-sm-offset-2 col-sm-10">
-					<h2>LOGIN PAGE</h2>
-				</div>
-				<form class="form-horizontal" id="login_form">
-					<div class="form-group">
-						<label class="control-label col-sm-2" for="id"></label>
-						<div class="col-sm-6">
-							<input type="text" class="form-control" id="id" placeholder="아이디"
+		<div class="no-gutters slider-text js-fullheight loginpage">
+			<div class="login-header">
+				<h2 class="login-header-main">SAMM</h2>
+				<h4 class="login-header-sub">SEARCH FESTIVAL</h4>
+			</div>
+			<div class="login--form">
+				<form id="login_form">
+					<div>
+						<div>
+							<input type="text" class="login-input" id="id" placeholder="아이디"
 								name="id">
 						</div>
 					</div>
-					<div class="form-group">
-						<label class="control-label col-sm-2" for="pwd"></label>
-						<div class="col-sm-6">
-							<input type="password" class="form-control" id="pwd"
+					<div>
+						<div>
+							<input type="password" class="login-input" id="pwd"
 								placeholder="비밀번호" name="pwd">
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-sm-offset-2 col-sm-10">
-							<button id="signin_bt" type="submit" class="btn btn-default">Sign In</button>
-							
-							<button id="signup_bt" type="button" class="btn btn-default" onclick="location.href='/users/add'">Sign Up</button>
-							<a id="custom-login-btn" href="javascript:kakaoLogin()">
-							  <img
-							    src="//k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg"
-							    width="222"
-							    alt="카카오 로그인 버튼"
-							  />
-							</a>
-							 
-						</div>
-					</div>
 				</form>
+				<div class="btn-div">
+					<div>
+						<button id="signin_bt" class="btn btn-default login-btn">Sign
+							In</button>
+						<button id="signup_bt" class="btn btn-default login-btn"
+							onclick="location.href='/users/add'">Sign Up</button>
+					</div>
+					<div>
+						<button id="idsearch_bt" class="btn btn-default login-btn">
+							Forget your password?</button>
+					</div>
+					<div>
+						<a id="custom-login-btn" href="javascript:kakaoLogin()"> <img
+							src="//k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg"
+							width="222" alt="카카오 로그인 버튼" />
+						</a>
+					</div>
+				</div>
+
 			</div>
-			<div class="col-md-9 ftco-animate pb-5 text-center"></div>
 		</div>
+		<div class="col-md-9 ftco-animate pb-5 text-center"></div>
 	</div>
 </section>
