--- a/samm/src/main/resources/templates/login.html
+++ b/samm/src/main/resources/templates/login.html
@@ -14,34 +14,35 @@
 				<form id="login_form">
 					<div>
 						<div>
-							<input type="text" class="login-input" id="id" placeholder="아이디"
+							<input type="text" class="login-input" id="id" placeholder="Please Write Your ID"
 								name="id">
 						</div>
 					</div>
 					<div>
 						<div>
 							<input type="password" class="login-input" id="pwd"
-								placeholder="비밀번호" name="pwd">
+								placeholder="Please Write Your Password" name="pwd">
 						</div>
 					</div>
 				</form>
 				<div class="btn-div">
-					<div>
+					<div class="loginbtndiv">
 						<button id="signin_bt" class="btn btn-default login-btn">Sign
 							In</button>
 						<button id="signup_bt" class="btn btn-default login-btn"
 							onclick="location.href='/users/add'">Sign Up</button>
 					</div>
-					<div>
+					<div class="loginbtndiv">
+						<a id="custom-login-btn" href="javascript:kakaoLogin()"> <img
+							src="//k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg"
+							width="180" alt="카카오 로그인 버튼" />
+						</a>
+					</div>
+					<div class="loginbtndiv">
 						<button id="idsearch_bt" class="btn btn-default login-btn">
 							Forget your password?</button>
 					</div>
-					<div>
-						<a id="custom-login-btn" href="javascript:kakaoLogin()"> <img
-							src="//k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg"
-							width="222" alt="카카오 로그인 버튼" />
-						</a>
-					</div>
+
 				</div>
 
 			</div>
