--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -94,6 +94,11 @@
 	font-size:16px !important;
 }
 
+.avgstar{
+	padding-left : 7px;
+	font-size:16px !important;
+}
+
 .login--form{
 	width: 35%
 }
