--- a/samm/src/main/resources/templates/festival/detail.html
+++ b/samm/src/main/resources/templates/festival/detail.html
@@ -122,6 +122,8 @@
 		<label for="file" id="label-file"><span class="file-span">직접 찍은 사진을 등록해주세요.</span><img src="https://cdn.visitkorea.or.kr/resources/images/sub/bg_pic_reg.jpg"></label>
 			<input type="file" id="file" name="mf" onchange="filecheck()"> 
 			<input name="fid" th:value="${common['contentid']}" hidden> 
+			<span th:if="${session.loginuser} != null">
+			<input name="uid" th:value="${session.loginuser.id}" hidden> </span>
 			<input id="festivalimg" th:value="${common['firstimage']}" hidden>
 	</form>
 	
