--- a/samm/src/main/resources/templates/board.html
+++ b/samm/src/main/resources/templates/board.html
@@ -79,7 +79,7 @@ function goDetail(bno){
 	</div>
 	<div class="row mt-5">
 		<div class="col text-center">
-			<div class="block-27">
+			<div class="block-27 ">
 				<ul>
 					<li><a href="#">&lt;</a></li>
 					<li class="active"><span>1</span></li>
@@ -90,8 +90,8 @@ function goDetail(bno){
 					<li><a href="#">&gt;</a></li>
 				</ul>
 			</div>
+			<div></div>
 		</div>
-	</div>
 	</div>
 </section>
 
