사진파일추가, chatbot popup수정, 기타 오류 수정

--- a/samm/src/main/resources/templates/chatbot.html
+++ b/samm/src/main/resources/templates/chatbot.html
@@ -70,9 +70,9 @@
 		</div>
 	</div>
 
-	<div id="no-mobile">
+<!-- 	<div id="no-mobile">
 		<span> Your screen is too big resize please..</span>
-	</div>
+	</div> -->
 	
 	<script src="https://kit.fontawesome.com/8c64c3404f.js"></script>
 	<script src="/js/chatbot.js"></script>
