--- a/samm/src/main/resources/templates/users/forget.html
+++ b/samm/src/main/resources/templates/users/forget.html
@@ -1,13 +1,13 @@
 <meta charset="UTF-8">
 <script src="/js/forget.js"></script>
 <section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url(/images/festival5.jpg);">
+	style="background-image: url(/images/festival9.jpg);">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="no-gutters slider-text js-fullheight loginpage">
 			<div class="login-header">
 				<h2 class="login-header-main">SAMM</h2>
-				<h4 class="login-header-sub">SEARCH FESTIVAL</h4>
+				<h4 class="login-header-sub">Find Password</h4>
 			</div>
 			<div class="login--form">
 				<form id="forget_form">
