chatbot time update

--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -94,7 +94,7 @@
 	
 	<div id="chatbot-div">
 	<span id="chatbot-text" class="hidden">원하는 축제를 챗봇이 찾아 드려요!</span>
-	<a class="popup-vimeo" href="/chatbot"><i id="chatbot" class="bi bi-chat-right-dots "></i></a>
+	<a><i id="chatbot" class="bi bi-chat-right-dots "></i></a>
 	
 	</div>
 
