--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -93,11 +93,11 @@
 		<div class="s003 d-flex flex-column" id="map-searchbox">
 			<form class="item" id="map-searchform">
 				<div id="map-keywordform" class="inner-form">
-					<div id="map-keyword" class="keyword-empty">
+					<div id="map-keyword" class="keyword-empty ">
 						<input name="search" type="text" placeholder="Enter Keywords?" />
 						<input type="text" style="display:none;">
 					</div>
-					<button onclick="clearsearch();" id="map-clearbtn" class="btn" type="button">
+					<button onclick="clearsearch();" id="map-clearbtn" style="display:none;" class="btn" type="button">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
 							<!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 							<path fill="currentColor"
@@ -107,13 +107,16 @@
 					<button id="map-opencalbtn" onclick="opensearchcal()" class="btn" type="button">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
 							<!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-							<path fill="currentColor" d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"/>
+							<path fill="currentColor"
+								d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z" />
 						</svg>
 					</button>
-					<button id="map-closecalbtn" onclick="closesearchcal()" style="display:none;" class="btn" type="button">
+					<button id="map-closecalbtn" onclick="closesearchcal()" style="display:none;" class="btn"
+						type="button">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">-->
 							<!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-							<path fill="currentColor" d="M352 352c-8.188 0-16.38-3.125-22.62-9.375L192 205.3l-137.4 137.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25C368.4 348.9 360.2 352 352 352z"/>
+							<path fill="currentColor"
+								d="M352 352c-8.188 0-16.38-3.125-22.62-9.375L192 205.3l-137.4 137.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25C368.4 348.9 360.2 352 352 352z" />
 						</svg>
 					</button>
 					<button id="map-searchbtn" class="btn btn-search" type="button">
@@ -125,11 +128,28 @@
 					</button>
 				</div>
 				<div id="map-calendarform" class="inner-form" style="display:none;">
-					<div id="map-startdate">
-						<input name="eventstartdate" type="text" placeholder="축제 시작일" />
+					<div id="map-startdate" class="map-date">
+						<div class="form-field">
+							<input type="text" data-provide="datepicker" name="eventstartdate" placeholder="Start Date">
+						</div>
 					</div>
-					<div id="map-enddate">
-						<input name="eventenddate" type="text" placeholder="축제 말일" />
+					<!-- <div id="map-startdate" class="map-date">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+							! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc.
+							<path
+								d="M152 64H296V24C296 10.75 306.7 0 320 0C333.3 0 344 10.75 344 24V64H384C419.3 64 448 92.65 448 128V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V128C0 92.65 28.65 64 64 64H104V24C104 10.75 114.7 0 128 0C141.3 0 152 10.75 152 24V64zM48 448C48 456.8 55.16 464 64 464H384C392.8 464 400 456.8 400 448V192H48V448z" />
+						</svg>
+						<input type="text" class="form-control" name="eventstartdate" placeholder="Choose Start Date" readonly="readonly">
+					</div> -->
+
+
+					<!-- <div id="map-startdate">
+						<input name="eventstartdate" type="text" placeholder="축제 시작일" />
+					</div> -->
+					<div id="map-enddate" class="map-date">
+						<div class="form-field">
+							<input type="text" data-provide="datepicker" name="eventenddate" placeholder="End Date">
+						</div>
 					</div>
 				</div>
 			</form>
