--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -130,7 +130,7 @@
 				<div id="map-calendarform" class="inner-form" style="display:none;">
 					<div id="map-startdate" class="map-date">
 						<div class="form-field">
-							<input type="text" data-provide="datepicker" name="eventstartdate" placeholder="Start Date">
+							<input type="text" data-provide="datepicker" data-date-format="yyyymmdd" class="map-datepick" name="eventstartdate" placeholder="Start Date">
 						</div>
 					</div>
 					<!-- <div id="map-startdate" class="map-date">
@@ -148,7 +148,7 @@
 					</div> -->
 					<div id="map-enddate" class="map-date">
 						<div class="form-field">
-							<input type="text" data-provide="datepicker" name="eventenddate" placeholder="End Date">
+							<input type="text" data-provide="datepicker" data-date-format="yyyymmdd" class="map-datepick" name="eventenddate" placeholder="End Date">
 						</div>
 					</div>
 				</div>
