--- a/samm/src/main/resources/templates/test.html
+++ b/samm/src/main/resources/templates/test.html
@@ -1,13 +1,13 @@
 
 <section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url('images/festival3.jpg');">
+	style="background-image: url('/images/festival3.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div
 			class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
 			<div class="col-md-9 ftco-animate pb-5 text-center">
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="index.html">Home <i
+					<span class="mr-2"><a href="/">Home <i
 							class="fa fa-chevron-right"></i></a></span> <span>About us <i
 						class="fa fa-chevron-right"></i></span>
 				</p>
