--- a/samm/src/main/resources/templates/users/mypage.html
+++ b/samm/src/main/resources/templates/users/mypage.html
@@ -1,9 +1,18 @@
-<meta charset="UTF-8">
-<section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url('images/bg_1.jpg');">
-	<div class="overlay"></div>
 
+<section class="hero-wrap hero-wrap-2 js-fullheight"
+	style="background-image: url('/images/festival11.jpg');">
+	<div class="overlay"></div>
 	<div class="container">
-		<h1>mypage</h1>
+		<div
+			class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+			<div class="col-md-9 ftco-animate pb-5 text-center">
+				<p class="breadcrumbs">
+					<span class="mr-2"><a href="/">Home <i
+							class="fa fa-chevron-right"></i></a></span> <span>Mypage<i
+						class="fa fa-chevron-right"></i></span>
+				</p>
+				<h1 class="mb-0 bread">My page</h1>
+			</div>
+		</div>
 	</div>
 </section>
