--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -70,7 +70,7 @@
 						</a>	
 						<ul class="dropdown-menu fdrop">
 						  <li><a  class="nav-link droplink" id="signout">Sign Out</a></li>
-						  <li><a href="/users/mypage" class="nav-link droplink">My page</a></li>
+						  <li><a  th:href="@{/users/mypage(id=${session.loginuser.id})}" class="nav-link droplink">My page</a></li>
 						</ul>
 					</li>  
 
