--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -71,6 +71,7 @@
 						<ul class="dropdown-menu fdrop">
 							<li><a href="/logout" class="nav-link droplink">Sign Out</a></li>
 							<li><a href="/users/mypage" class="nav-link droplink">My page</a></li>
+							<input th:value="${session.loginuser.id}" id="loginuser" hidden>
 						</ul>
 					</li>
 
@@ -130,7 +131,8 @@
 				<div id="map-calendarform" class="inner-form" style="display:none;">
 					<div id="map-startdate" class="map-date">
 						<div class="form-field">
-							<input type="text" data-provide="datepicker" data-date-format="yyyymmdd" class="map-datepick" name="eventstartdate" placeholder="Start Date">
+							<input type="text" data-provide="datepicker" data-date-format="yyyymmdd"
+								class="map-datepick" name="eventstartdate" placeholder="Start Date">
 						</div>
 					</div>
 					<!-- <div id="map-startdate" class="map-date">
@@ -148,7 +150,8 @@
 					</div> -->
 					<div id="map-enddate" class="map-date">
 						<div class="form-field">
-							<input type="text" data-provide="datepicker" data-date-format="yyyymmdd" class="map-datepick" name="eventenddate" placeholder="End Date">
+							<input type="text" data-provide="datepicker" data-date-format="yyyymmdd"
+								class="map-datepick" name="eventenddate" placeholder="End Date">
 						</div>
 					</div>
 				</div>
