--- a/samm/src/main/resources/templates/board.html
+++ b/samm/src/main/resources/templates/board.html
@@ -5,6 +5,7 @@ function goDetail(bno){
 	location.href='/board/detail?bno='+bno; 
 };
 
+
 </script>
 
 <style>
@@ -15,6 +16,58 @@ function goDetail(bno){
 .contents-box {
 	word-break: break-all;
 }
+.search-container {
+      background-color: rgb(253, 253, 250);
+      width: 100%;
+      height: 110px;
+      border: 1px solid #ddd;
+      margin-top : 10px;
+      margin-bottom: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .search-form {
+      height: 37px;
+      display: flex;
+    }
+    .search-option {
+      width: 100px;
+      height: 100%;
+      outline: none;
+      margin-right: 5px;
+      border: 1px solid #ccc;
+      color: gray;
+    }
+    .search-option > option {
+      text-align: center;
+    }
+    .search-input {
+      color: gray;
+      background-color: white;
+      border: 1px solid #ccc;
+      height: 100%;
+      width: 300px;
+      font-size: 15px;
+      padding: 5px 7px;
+    }
+    .search-input::placeholder {
+      color: gray;
+    }
+    .search-button {
+      /* 메뉴바의 검색 버튼 아이콘  */
+      width: 20%;
+      height: 100%;
+      background-color: rgb(22, 22, 22);
+      color: rgb(209, 209, 209);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 15px;
+    }
+    .search-button:hover {
+      color: rgb(165, 165, 165);
+    }
 </style>
 
 <section class="hero-wrap hero-wrap-2 js-fullheight"
@@ -67,11 +120,23 @@ function goDetail(bno){
 			</div>
 		</div>
 	</div>
-	
-	
-	
-	<a class="btn dark write" id="writeBtn"onclick="location.href='/board/write'">글쓰기</a>
+	<div class="search-container">	
+      <form action="/board" class="search-form" method="get">
+        <select class="search-option" name="option">
+          <option value="A" ${ph.sc.option=='A' || ph.sc.option=='' ? "selected" : ""}>제목+내용</option>
+          <option value="T" ${ph.sc.option=='T' ? "selected" : ""}>제목만</option>
+          <option value="W" ${ph.sc.option=='W' ? "selected" : ""}>작성자</option>
+        </select>
 
+        <input type="text" name="keyword" class="search-input" th:value="${ph.sc.keyword}" placeholder="검색어를 입력해주세요">
+        <input type="submit" class="search-button" value="검색">
+         
+      </form> 	
+     <button id="writeBtn" class="btn-write" onclick="location.href='/board/write'"><i class="fa fa-pencil"></i> 글쓰기</button>
+    
+    </div>
+	
+	
 	
 	
 	 <div>   
@@ -81,16 +146,17 @@ function goDetail(bno){
 		<div class="col text-center">
 			<div class="block-27 ">
 				<ul>
-					<li><a href="#">&lt;</a></li>
+
+					<li><a th:value="${ph.showPrev}" href="#">&lt;</a></li>
 					<li class="active"><span>1</span></li>
-					<li><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">4</a></li>
-					<li><a href="#">5</a></li>
 					<li><a href="#">&gt;</a></li>
 				</ul>
 			</div>
-			<div></div>
+			
+			<div>
+			
+			</div>
+		
 		</div>
 	</div>
 </section>
