--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -181,6 +181,37 @@
 			</div>
 		</div>
 	</div>
+	<!-- Modal -->
+	<div id="myModal" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header  modal-title2">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Share Festival</h4>
+				</div>
+				<div class="modal-body mbody1">
+					<a onClick="shareTwitter()"><i
+						class="bi bi-twitter share-icon-i"></i> <span class="icon-text">Twitter</span></a>
+					<a onClick="shareFacebook()"><i
+						class="bi bi-facebook share-icon-i"></i> <span class="icon-text">Facebook</span></a>
+					<a onClick="shareKakao()"> <img
+						src="https://developers.kakao.com/assets/img/about/logos/kakaotalksharing/kakaotalk_sharing_btn_medium.png"
+						alt="카카오톡 공유 보내기 버튼" class="share-icon-i" style="width: 50px;" /><span
+						class="icon-text">Kakao</span>
+					</a>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default modal-close"
+						data-dismiss="modal">Close</button>
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<!-- Modal End -->
+
 
 	<script src="/js/login.js"></script>
 	<script src="/js/chatbot.js"></script>
